rendered/envs/friclu/kube-prometheus-stack/ingress-kube-prometheus-stack-grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/instance: kube-prometheus-stack
    app.kubernetes.io/name: grafana
    app.kubernetes.io/version: 11.5.2
    helm.sh/chart: grafana-8.10.1
  name: kube-prometheus-stack-grafana
  namespace: kube-prometheus-stack
spec:
  ingressClassName: nginx
  rules:
    - host: grafana-friclu.duckdns.org
      http:
        paths:
          - backend:
              service:
                name: kube-prometheus-stack-grafana
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - grafana-friclu.duckdns.org
      secretName: grafana-certificate
